0026574: Remove redundant dependence of TKIGES on TKOffset